# OpenDirector

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  FOUNDATION.md  FOUNDING.md  GOAL.md  MANIFESTO.md  PRINCIPLES.md  THEORY.md  event.md  timestamp.md
docs/ADR/: ADR-0001-timeline-core.md  ADR-0002-everything-is-a-timeline-event.md  ADR-0003-ai-agents-replace-jobs-not-people.md  ADR-0005-production-diary.md  (+1 more)
examples/: __init__.py
opendirector/: __init__.py  cli.py  studio.py
opendirector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: render_ltx.py
tests/: .test_evolution.py.swp  test_animate_application.py  test_animation_provider.py  test_artifact.py  test_blueprint_evolution.py  test_candidate.py  test_clip_timeline_application.py  test_creative_cycle.py  test_creative_cycle_container.py  test_creative_cycle_validation.py  test_creative_products.py  test_creative_runtime.py  test_creative_traits_evolution.py  test_crew.py  test_direct_application.py  test_event.py  test_evolution.py  test_evolution_engine.py  test_intent.py  test_kernel.py  test_kernel_primitives.py  test_knowledge.py  test_ltx_animation_provider.py  test_movie.py  test_planning_runtime.py  test_production_diary.py  test_production_specification.py  test_production_workspace.py  test_professions.py  test_providers.py  test_refine_application.py  test_scene.py  test_scene_planning_circle.py  test_shot_markdown.py  test_sketch_application.py  test_studio.py  test_timeline.py  test_timeline_compatibility.py  test_timeline_event.py  test_timestamp.py  (+2 more)
(+154 files in other folders)
