 [project]
 name = "opendirector"
 version = "0.4.0"
 description = "OpenDirector Core - timeline-first AI filmmaking architecture"
 requires-python = ">=3.10"
 dependencies = [
   "typer>=0.12.0",
   "pydantic>=2.0.0",
   "rich>=13.0.0"
 ]

 [project.scripts]
 opendirector = "opendirector.cli.main:app"

 [build-system]
 requires = ["setuptools>=68"]
 build-backend = "setuptools.build_meta"

 [tool.setuptools.packages.find]
 include = ["opendirector*"]
 exclude = ["projects*", "docs*", "tests*"]
