[project]
name = "opendirector"
version = "0.2.0"
description = "OpenDirector timestamp primitive"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["opendirector*"]

[project.scripts]
opendirector = "opendirector.cli.main:main"

